text fix and text align test

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -93,7 +93,8 @@ header .container {
   font-family: var(--font-secondary);
   color: var(--font-secondary-color);
   line-height: 1.8;
-  padding: 0 8%;
+  padding: 0 9%;
+  text-align: justify;
 }
 
 .not-connected a {
